--- a/examples/demo2/index.html
+++ b/examples/demo2/index.html
@@ -119,7 +119,7 @@
 						</li>
 						<li class="nav-item">
 							<a data-toggle="collapse" href="#base">
-								<i class="fas fa-layer-group"></i>
+								<i class="fas fa-th-list"></i>
 								<p>Produtos</p>
 								<span class="caret"></span>
 							</a>
@@ -140,7 +140,7 @@
 						</li>
 						<li class="nav-item">
 							<a data-toggle="collapse" href="#sidebarLayouts">
-								<i class="fas fa-th-list"></i>
+								<i class="fas fa-clipboard"></i>
 								<p>Operações</p>
 								<span class="caret"></span>
 							</a>
@@ -173,9 +173,15 @@
 								<p>Cronometragem</p>	
 							</a>
 						</li>
+                                                <li class="nav-item">
+							<a data-toggle="collapse" href="#tables">
+								<i class="fas fa-paperclip"></i>
+								<p>Relatórios</p>	
+							</a>
+						</li>
 						<li class="nav-item">
 							<a data-toggle="collapse" href="#maps">
-								<i class="fas fa-map-marker-alt"></i>
+								<i class="fas fa-user"></i>
 								<p>Usuários</p>
 								<span class="caret"></span>
 							</a>
