--- a/examples/demo2/editarElementos.html
+++ b/examples/demo2/editarElementos.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -230,7 +231,7 @@
                                     <i class="flaticon-right-arrow"></i>
                                 </li>
                                 <li class="nav-item">
-                                    <a>Produtos</a>
+                                    <a>Operações</a>
                                 </li>
                                 <li class="separator">
                                     <i class="flaticon-right-arrow"></i>
@@ -238,24 +239,60 @@
                                 <li class="nav-item">
                                     <a>Cadastrar</a>
                                 </li>
+                                <li class="separator">
+                                    <i class="flaticon-right-arrow"></i>
+                                </li>
+                                <li class="nav-item">
+                                    <a>Elementos</a>
+                                </li>
+                                <li class="separator">
+                                    <i class="flaticon-right-arrow"></i>
+                                </li>
+                                <li class="nav-item">
+                                    <a>Editar Elemento</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <div class="card-title">Cadastrar Produto</div>
+                                        <div class="card-title">Editar Elemento</div>
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-md-6 col-lg-4">
                                                 <div class="form-group">
-                                                    <label for="pronom">Nome do Produto</label>
-                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="pronom" placeholder="Digite o nome do Produto">                                                    
+                                                    <label for="openom">Nome do Elemento</label>
+                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="openom" placeholder="Digite o nome da Operação">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opecod">Código Operação</label>
+                                                    <input style="width: 155px" type="number" class="form-control" id="opecod" placeholder="Digite o Produto">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="elerit">Ritmo</label>
+                                                    <input style="width: 155px" type="number" class="form-control" id="elerit" placeholder="Digite a Máquina">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="eleint">EleInt</label>
+                                                    <input style="width: 155px" type="text" class="form-control" id="eleint" placeholder="Digite Tip Est">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="elecon">EleCon</label>
+                                                    <input style="width: 155px" type="text" class="form-control" id="elecon" placeholder="Digite OpeCro">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="eleqtdvez">Quantidade de Vezes</label>
+                                                    <input style="width: 155px" type="text" class="form-control" id="eleqtdvez" placeholder="Digite OpeCro">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="eleporpçs">Peças</label>
+                                                    <input style="width: 155px" type="text" class="form-control" id="eleporpçs" placeholder="Digite OpeCro">                                                    
                                                 </div>
                                                 <div style="display: flex; margin-left: 10px">
-                                                    <button class="btn btn-success">Cadastrar</button>
-                                                    <a href="index.html"><button style="margin-left: 5px" class="btn btn-danger">Voltar</button></a>
+                                                    <button class="btn btn-warning">Editar</button>
+                                                    <a href="cadastrarOperacoes.html"><button style="margin-left: 5px" class="btn btn-danger">Voltar</button></a>
                                                 </div>
                                             </div>
                                         </div>
