--- a/examples/demo2/editarOperacoes.html
+++ b/examples/demo2/editarOperacoes.html
@@ -230,13 +230,19 @@
                                     <i class="flaticon-right-arrow"></i>
                                 </li>
                                 <li class="nav-item">
-                                    <a>Produtos</a>
+                                    <a>Operações</a>
                                 </li>
                                 <li class="separator">
                                     <i class="flaticon-right-arrow"></i>
                                 </li>
                                 <li class="nav-item">
-                                    <a>Cadastrar</a>
+                                    <a>Listar</a>
+                                </li>
+                                <li class="separator">
+                                    <i class="flaticon-right-arrow"></i>
+                                </li>
+                                <li class="nav-item">
+                                    <a>Editar Operações</a>
                                 </li>
                             </ul>
                         </div>
@@ -244,17 +250,33 @@
                             <div class="col-md-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <div class="card-title">Cadastrar Produto</div>
+                                        <div class="card-title">Editar Operação</div>
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-md-6 col-lg-4">
                                                 <div class="form-group">
-                                                    <label for="pronom">Nome do Produto</label>
-                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="pronom" placeholder="Digite o nome do Produto">                                                    
+                                                    <label for="openom">Nome da Operação</label>
+                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="openom" placeholder="Digite o nome da Operação">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="procod">Código Produto</label>
+                                                    <input style="width: 155px" type="number" class="form-control" id="procod" placeholder="Digite o Produto">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opemaq">Máquina</label>
+                                                    <input style="width: 405px" type="text" class="form-control" id="opemaq" placeholder="Digite a Máquina">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opetipest">Tip. Est.</label>
+                                                    <input style="width: 150px" type="text" class="form-control" id="opetipest" placeholder="Digite Tip Est">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opecro">Ope Cro</label>
+                                                    <input style="width: 400px" type="text" class="form-control" id="opecro" placeholder="Digite OpeCro">                                                    
                                                 </div>
                                                 <div style="display: flex; margin-left: 10px">
-                                                    <button class="btn btn-success">Cadastrar</button>
+                                                    <button class="btn btn-warning">Editar</button>
                                                     <a href="index.html"><button style="margin-left: 5px" class="btn btn-danger">Voltar</button></a>
                                                 </div>
                                             </div>
