--- a/examples/demo2/editarUsuarios.html
+++ b/examples/demo2/editarUsuarios.html
@@ -230,13 +230,19 @@
                                     <i class="flaticon-right-arrow"></i>
                                 </li>
                                 <li class="nav-item">
-                                    <a>Produtos</a>
+                                    <a>Usuários</a>
                                 </li>
                                 <li class="separator">
                                     <i class="flaticon-right-arrow"></i>
                                 </li>
                                 <li class="nav-item">
-                                    <a>Cadastrar</a>
+                                    <a>Listar</a>
+                                </li>
+                                <li class="separator">
+                                    <i class="flaticon-right-arrow"></i>
+                                </li>
+                                <li class="nav-item">
+                                    <a>Editar Usuário</a>
                                 </li>
                             </ul>
                         </div>
@@ -244,14 +250,22 @@
                             <div class="col-md-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <div class="card-title">Cadastrar Produto</div>
+                                        <div class="card-title">Cadastrar Usuário</div>
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-md-6 col-lg-4">
                                                 <div class="form-group">
-                                                    <label for="pronom">Nome do Produto</label>
-                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="pronom" placeholder="Digite o nome do Produto">                                                    
+                                                    <label for="usunom">Nome Usuário</label>
+                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="usunom" placeholder="Digite o nome do Usuário">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="ususen">Senha</label>
+                                                    <input maxlength="50" style="width: 115px" type="password" class="form-control" id="ususen" placeholder="Senha">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="ususen">Confirmar Senha</label>
+                                                    <input maxlength="50" style="width: 115px" type="password" class="form-control" id="ususen" placeholder="Confirme">                                                    
                                                 </div>
                                                 <div style="display: flex; margin-left: 10px">
                                                     <button class="btn btn-success">Cadastrar</button>
