--- a/examples/demo2/cadastrarOperacoes.html
+++ b/examples/demo2/cadastrarOperacoes.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,6 +27,63 @@
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../assets/css/demo.css">
 </head>
+<div class="modal fate" id="Elementos" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+    <div class="modal-dialog  modal-dialog-centered text-center" role="document" style="max-width: 1150px; width: auto; display: 50%">
+    <div class="modal-content" style="background-color: #202940">
+        <div class="modal-header">
+        <h3 class="text-white" id="TituloModalCentralizado">Elementos</h3>
+      </div>
+      <div class="modal-body">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table id="add-row" class="display table table-striped table-hover" >
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Elemento</th>
+                            <th>Cód. Operação</th>
+                            <th>Ritmo</th>
+                            <th>EleInt</th>
+                            <th>EleCon</th>
+                            <th>Quantidade de Vezes</th>
+                            <th>Peças</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>System Architect</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>
+                                <div class="form-button-action">
+                                    <a href="cadastrarElementos.html"><button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-success" data-original-title="Adicionar Elemento">
+                                        <i class="fa fa-plus"></i>
+                                    </button></a>
+                                    <a href="editarElementos.html"><button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Editar Elemento">
+                                        <i class="fa fa-edit"></i>
+                                    </button></a>
+                                    <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-danger" data-original-title="Remover Elemento">
+                                        <i class="fa fa-times"></i>
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Voltar</button>
+      </div>
+    </div>
+  </div>
+</div>
 <body data-background-color="dark">
 	<div class="wrapper">
 		<div class="main-header">
@@ -230,7 +288,7 @@
                                     <i class="flaticon-right-arrow"></i>
                                 </li>
                                 <li class="nav-item">
-                                    <a>Produtos</a>
+                                    <a>Operações</a>
                                 </li>
                                 <li class="separator">
                                     <i class="flaticon-right-arrow"></i>
@@ -244,17 +302,37 @@
                             <div class="col-md-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <div class="card-title">Cadastrar Produto</div>
+                                        <div class="card-title">Cadastrar Operação</div>
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-md-6 col-lg-4">
                                                 <div class="form-group">
-                                                    <label for="pronom">Nome do Produto</label>
-                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="pronom" placeholder="Digite o nome do Produto">                                                    
+                                                    <label for="openom">Nome da Operação</label>
+                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="openom" placeholder="Digite o nome da Operação">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="procod">Código Produto</label>
+                                                    <input style="width: 155px" type="number" class="form-control" id="procod" placeholder="Digite o Produto">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opemaq">Máquina</label>
+                                                    <input style="width: 405px" type="text" class="form-control" id="opemaq" placeholder="Digite a Máquina">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opetipest">Tip. Est.</label>
+                                                    <input style="width: 150px" type="text" class="form-control" id="opetipest" placeholder="Digite Tip Est">                                                    
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="opecro">OpeCro</label>
+                                                    <input style="width: 400px" type="text" class="form-control" id="opecro" placeholder="Digite OpeCro">                                                    
                                                 </div>
                                                 <div style="display: flex; margin-left: 10px">
                                                     <button class="btn btn-success">Cadastrar</button>
+                                                    <button style="margin-left: 5px" class="btn btn-secondary" data-toggle="modal" data-target="#Elementos">
+                                                           
+                                                            Elementos
+                                                    </button>
                                                     <a href="index.html"><button style="margin-left: 5px" class="btn btn-danger">Voltar</button></a>
                                                 </div>
                                             </div>
