--- a/examples/demo2/cadastrarUsuarios.html
+++ b/examples/demo2/cadastrarUsuarios.html
@@ -251,7 +251,7 @@
                                             <div class="col-md-6 col-lg-4">
                                                 <div class="form-group">
                                                     <label for="usunom">Nome Usuário</label>
-                                                    <input maxlength="50" style="width: 405px" type="text" class="form-control" id="usunom" placeholder="Digite o nome do Usuário">                                                    
+                                                    <input data-background-color="dark" maxlength="50" style="width: 405px" type="text" class="form-control" id="usunom" placeholder="Digite o nome do Usuário">                                                    
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="ususen">Senha</label>
